--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer sitio web</title>
     <link rel="stylesheet" href="../css/style.css" media="all"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="site-header">
         <h1>Bitácora</h1>
+        <nav class="site-navegation"
+        <a href="../bitacora-rosariovicenteg/index.html"> </a>
+        </nav>
     </header>
-    <img src="../Imagenes/Foto.jpg.jpg" alt="Foto de Rosario" width="200px">
+    <main class="site-main">
+        <p>     Lorem ipsum dolor sit amet. Id eveniet adipisci est consequatur molestias qui sint natus et recusandae ipsa et rerum aliquid nam beatae obcaecati. Est voluptatem consequatur in repellat reprehenderit ea harum ullam qui voluptas similique non sunt perferendis et pariatur voluptatem. Ea enim quibusdam aut maxime provident a quia culpa?
+
+            Id Quis quidem eum nemo repudiandae qui consequuntur voluptatem. Aut voluptatem repellat cum facilis aliquam aut consequatur facere et quam provident ut atque nihil ut dolorum velit ut sapiente neque. Sit praesentium magnam et quidem dolor et enim molestiae sed corporis reprehenderit sed sint consequatur et voluptas libero qui magni laborum.
+            
+            A incidunt nemo ut dolore autem qui ducimus commodi in enim laborum. Eos amet reprehenderit ex tempora doloremque et enim nihil qui nisi excepturi.      </p>
+        <img src="../Imagenes/Foto.jpg.jpg" alt="Foto de Rosario" width="200px">
+        <br>
+        <input type= "text"
+    </main>
     <footer> 
-        <address> Calafquen 90</address>
+        <address> Rosario Vicente G</address>
     </footer>
 </body>
 </html>
