--- a/index.html
+++ b/index.html
@@ -12,23 +12,61 @@
 </head>
 <body>
     <header class="site-header">
-        <h1>Bitácora</h1>
-        <nav class="site-navegation"
-        <a href="../bitacora-rosariovicenteg/index.html"> </a>
-        </nav>
+        <div class="container">
+            <h1>Diseño desde el Código 2021 - Rosario Vicente</h1> 
+            <nav class="site-navegation">
+                <a href="../bitacora-rosariovicenteg/index.html">Volver a inicio</a>
+                <a href="#">Inicio</a>
+                <a href="#">Sobre mi</a>
+                <a href="#">Sobre las clases</a>
+                <a href="#">Blog</a>
+                <a href="#">Contacto</a>
+            </nav>
+        </div>
     </header>
     <main class="site-main">
-        <p>     Lorem ipsum dolor sit amet. Id eveniet adipisci est consequatur molestias qui sint natus et recusandae ipsa et rerum aliquid nam beatae obcaecati. Est voluptatem consequatur in repellat reprehenderit ea harum ullam qui voluptas similique non sunt perferendis et pariatur voluptatem. Ea enim quibusdam aut maxime provident a quia culpa?
-
-            Id Quis quidem eum nemo repudiandae qui consequuntur voluptatem. Aut voluptatem repellat cum facilis aliquam aut consequatur facere et quam provident ut atque nihil ut dolorum velit ut sapiente neque. Sit praesentium magnam et quidem dolor et enim molestiae sed corporis reprehenderit sed sint consequatur et voluptas libero qui magni laborum.
-            
-            A incidunt nemo ut dolore autem qui ducimus commodi in enim laborum. Eos amet reprehenderit ex tempora doloremque et enim nihil qui nisi excepturi.      </p>
+        <div class="container">
+            <section class="home-section home-presentation">
+                <h2 class="home-section__title home-presentation__title">Presentación</h2>
+                <div class="home-presentation__description"> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia dolores rerum quo, non nobis libero recusandae doloremque ducimus amet at saepe laborum nisi et repellendus quasi ea eum voluptas praesentium?</p>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
+                        <li>Rcdvksbufvsonorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
+                        <li>bfnbsoibrsoniLorem ipsum dolor sit amet, consectetur adipisicing elit. 000</li>
+                        <li>cdvsvdsdvvdLorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
+                    </ul>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum incidunt excepturi vitae asperiores fuga aperiam veniam perspiciatis beatae blanditiis, voluptatem enim nemo ut pariatur culpa doloribus obcaecati error omnis dolor.</p>
+                </div>
+            </section>
+            <section class="home-section home-posts">
+                <h2 class="home-section__title home-posts__title">Últimas entradas</h2>
+                <article class="home-post">
+                    <h3 class="home-post__title">Título del artículo</h3>
+                    <div class="home-post__pubdate">Publicado el<time>16 agosto 2021</time></div>
+                    <div class="home-post__author">Autor: <cite>Rosario Vicente</cite></div>
+                    <div class="home-post__categories">Categorías: <a href="#">Lorem</a>, <a href="#">Lorem</a></div>
+                    <div class="home-post__content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto odio expedita, quo temporibus veritatis ipsa eius asperiores ipsam ex fugit fuga sequi iusto est repudiandae earum provident perspiciatis aliquid dolor?</p>
+                    </div>
+                </article>
+                <article class="home-post">
+                    <h3 class="home-post__title">Título del artículo</h3>
+                    <div class="home-post__pubdate">Publicado el<time>16 agosto 2021</time></div>
+                    <div class="home-post__author">Autor: <cite>Rosario Vicente</cite></div>
+                    <div class="home-post__categories">Categorías: <a href="#">Lorem</a>, <a href="#">Lorem</a></div>
+                    <div class="home-post__content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto odio expedita, quo temporibus veritatis ipsa eius asperiores ipsam ex fugit fuga sequi iusto est repudiandae earum provident perspiciatis aliquid dolor?</p>
+                    </div>
+                </article>
+            </section>
+        </div>
+    </main>
         <img src="../Imagenes/Foto.jpg.jpg" alt="Foto de Rosario" width="200px">
         <br>
-        <input type= "text"
-    </main>
     <footer> 
         <address> Rosario Vicente G</address>
     </footer>
+    
 </body>
 </html>
