--- a/index.html
+++ b/index.html
@@ -15,22 +15,18 @@
         <div class="container">
             <h1>Diseño desde el Código 2021 - Rosario Vicente</h1> 
             <nav class="site-navegation">
-                <a href="../bitacora-rosariovicenteg/index.html">Volver a inicio</a>
-                <a href="#">Inicio</a>
-                <a href="#">Sobre mi</a>
-                <a href="#">Sobre las clases</a>
-                <a href="#">Blog</a>
-                <a href="#">Contacto</a>
+                <a href="../bitacora-rosariovicenteg/index.html">Inicio</a>
+                <a href="../sobre mi/Sobre-mi.html">Sobre mi</a>
+                <a href="../clases/Clases.html">Clases</a>
+                <a href="../Contacto/Contacto.html">Contacto</a>
             </nav>
         </div>
     </header>
     <main class="site-main">
         <div class="container">
             <section class="home-section home-presentation">
-                <h2 class="home-section__title home-presentation__title">Presentación</h2>
+                <h2 class="home-section__title home-presentation__title">Contenidos o Unidades de Aprendizaje</h2>
                 <div class="home-presentation__description"> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia dolores rerum quo, non nobis libero recusandae doloremque ducimus amet at saepe laborum nisi et repellendus quasi ea eum voluptas praesentium?</p>
-                    <ul>
                         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
                         <li>Rcdvksbufvsonorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
                         <li>bfnbsoibrsoniLorem ipsum dolor sit amet, consectetur adipisicing elit. 000</li>
@@ -64,8 +60,15 @@
     </main>
         <img src="../Imagenes/Foto.jpg.jpg" alt="Foto de Rosario" width="200px">
         <br>
-    <footer> 
-        <address> Rosario Vicente G</address>
+    <footer class="site-footer">
+        <div class="container"
+            <footer class="bg-light text-center text-lg-start">
+                <div class="text-center p-3" >
+                Bitácora Diseño Desde el Código
+                <a class="text-dark" href="../bitacora-rosariovicenteg/index.html"">Volver al inicio</a>
+                </div>
+            </footer>
+        </div> 
     </footer>
     
 </body>
