--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+     <div class="content">
     <header class="site-header">
         <div class="container">
             <h1>Diseño desde el Código 2021 - Rosario Vicente</h1> 
@@ -21,53 +22,54 @@
                 <a href="../Contacto/Contacto.html">Contacto</a>
             </nav>
         </div>
-    </header>
+    </header>    
     <main class="site-main">
         <div class="container">
             <section class="home-section home-presentation">
                 <h2 class="home-section__title home-presentation__title">Contenidos o Unidades de Aprendizaje</h2>
                 <div class="home-presentation__description"> 
-                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
-                        <li>Rcdvksbufvsonorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
-                        <li>bfnbsoibrsoniLorem ipsum dolor sit amet, consectetur adipisicing elit. 000</li>
-                        <li>cdvsvdsdvvdLorem ipsum dolor sit amet, consectetur adipisicing elit. </li>
+                        <li>Introducción al diseño front-end </li>
+                        <li>HTML </li>
+                        <li>CSS</li>
+                        <li>Tipografías y modelo de caja </li>
+                        <li>Técnicas de diagramación </li>
+                        <li>JavaScript básico </li>
+                        <li>Preprocesadores </li>
+                        <li>Accesibilidas</li>
+                        <li>SEO </li>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum incidunt excepturi vitae asperiores fuga aperiam veniam perspiciatis beatae blanditiis, voluptatem enim nemo ut pariatur culpa doloribus obcaecati error omnis dolor.</p>
                 </div>
-            </section>
-            <section class="home-section home-posts">
-                <h2 class="home-section__title home-posts__title">Últimas entradas</h2>
-                <article class="home-post">
-                    <h3 class="home-post__title">Título del artículo</h3>
-                    <div class="home-post__pubdate">Publicado el<time>16 agosto 2021</time></div>
-                    <div class="home-post__author">Autor: <cite>Rosario Vicente</cite></div>
-                    <div class="home-post__categories">Categorías: <a href="#">Lorem</a>, <a href="#">Lorem</a></div>
-                    <div class="home-post__content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto odio expedita, quo temporibus veritatis ipsa eius asperiores ipsam ex fugit fuga sequi iusto est repudiandae earum provident perspiciatis aliquid dolor?</p>
-                    </div>
-                </article>
-                <article class="home-post">
-                    <h3 class="home-post__title">Título del artículo</h3>
-                    <div class="home-post__pubdate">Publicado el<time>16 agosto 2021</time></div>
-                    <div class="home-post__author">Autor: <cite>Rosario Vicente</cite></div>
-                    <div class="home-post__categories">Categorías: <a href="#">Lorem</a>, <a href="#">Lorem</a></div>
-                    <div class="home-post__content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto odio expedita, quo temporibus veritatis ipsa eius asperiores ipsam ex fugit fuga sequi iusto est repudiandae earum provident perspiciatis aliquid dolor?</p>
-                    </div>
-                </article>
             </section>
         </div>
+        <div class="container">
+            <section class="home-section home-posts">
+                <h2 class="home-section__title home-posts__title">Artículos</h2>
+                <article class="home-post">
+                    <h3 class="home-post__title">Título del artículo</h3>
+                    <div class="home-post__pubdate">Publicado el<time>16 agosto 2021</time></div>
+                    <div class="home-post__author">Autor: <cite>Rosario Vicente</cite></div>
+                    <div class="home-post__categories">Categorías: <a href="#">Lorem</a>, <a href="#">Lorem</a></div>
+                    <div class="home-post__content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto odio expedita, quo temporibus veritatis ipsa eius asperiores ipsam ex fugit fuga sequi iusto est repudiandae earum provident perspiciatis aliquid dolor?</p>
+                    </div>
+                </article>
+                <article class="home-post">
+                    <h3 class="home-post__title">Título del artículo</h3>
+                    <div class="home-post__pubdate">Publicado el<time>16 agosto 2021</time></div>
+                    <div class="home-post__author">Autor: <cite>Rosario Vicente</cite></div>
+                    <div class="home-post__categories">Categorías: <a href="#">Lorem</a>, <a href="#">Lorem</a></div>
+                    <div class="home-post__content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto odio expedita, quo temporibus veritatis ipsa eius asperiores ipsam ex fugit fuga sequi iusto est repudiandae earum provident perspiciatis aliquid dolor?</p>
+                    </div>
+                </article>
+            </section>
+        </div>    
     </main>
-        <img src="../Imagenes/Foto.jpg.jpg" alt="Foto de Rosario" width="200px">
-        <br>
+    </div>
     <footer class="site-footer">
         <div class="container"
-            <footer class="bg-light text-center text-lg-start">
-                <div class="text-center p-3" >
-                Bitácora Diseño Desde el Código
-                <a class="text-dark" href="../bitacora-rosariovicenteg/index.html"">Volver al inicio</a>
-                </div>
-            </footer>
+        <p>Bitácora Diseño Desde el Código</p>
+            <a class="text-dark" href="../bitacora-rosariovicenteg/index.html">Volver al inicio</a>
         </div> 
     </footer>
     
