--- a/index.html
+++ b/index.html
@@ -25,9 +25,21 @@
     </header>    
     <main class="site-main">
         <div class="container">
+                <h1 class="home-section__title home-presentation__title">Descripción y Contextualización de la Asignatura</h1>     
+            <section class="introduccion"> 
+                    <p>"El curso trata el diseño de códigos de interfaz para distintos medios y soportes digitales, es decir, la capa Front-end dentro de un proyecto digital. Los alumnos aprenderán a desarrollar proyectos digitales enfocándose en cómo estos se componen y construyen a través de un código limpio, claro y ordenado, utilizando lenguajes tales como HTML, CSS, SASS, Javascript entre otros."</p>    
+            </section>
+                <h1 class="home-section__title home-presentation__title">Objetivos</h1>     
+            <section class="introduccion"> 
+                        <p>"Conocer y utilizar las herramientas técnicas para la implementación de proyectos digitales. Comprender las posibilidades técnicas y particularidades 
+                            del medio digital. Comprender las relaciones entre contenidos, datos e interfaz."</p>    
+            </section>
+        </div>
+        <div class="container">
             <section class="home-section home-presentation">
-                <h2 class="home-section__title home-presentation__title">Contenidos o Unidades de Aprendizaje</h2>
+                <h1 class="home-section__title home-presentation__title">Contenidos o Unidades de Aprendizaje</h1>
                 <div class="home-presentation__description"> 
+                    <ul>
                         <li>Introducción al diseño front-end </li>
                         <li>HTML </li>
                         <li>CSS</li>
@@ -39,29 +51,6 @@
                         <li>SEO </li>
                     </ul>
                 </div>
-            </section>
-        </div>
-        <div class="container">
-            <section class="home-section home-posts">
-                <h2 class="home-section__title home-posts__title">Artículos</h2>
-                <article class="home-post">
-                    <h3 class="home-post__title">Título del artículo</h3>
-                    <div class="home-post__pubdate">Publicado el<time>16 agosto 2021</time></div>
-                    <div class="home-post__author">Autor: <cite>Rosario Vicente</cite></div>
-                    <div class="home-post__categories">Categorías: <a href="#">Lorem</a>, <a href="#">Lorem</a></div>
-                    <div class="home-post__content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto odio expedita, quo temporibus veritatis ipsa eius asperiores ipsam ex fugit fuga sequi iusto est repudiandae earum provident perspiciatis aliquid dolor?</p>
-                    </div>
-                </article>
-                <article class="home-post">
-                    <h3 class="home-post__title">Título del artículo</h3>
-                    <div class="home-post__pubdate">Publicado el<time>16 agosto 2021</time></div>
-                    <div class="home-post__author">Autor: <cite>Rosario Vicente</cite></div>
-                    <div class="home-post__categories">Categorías: <a href="#">Lorem</a>, <a href="#">Lorem</a></div>
-                    <div class="home-post__content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto odio expedita, quo temporibus veritatis ipsa eius asperiores ipsam ex fugit fuga sequi iusto est repudiandae earum provident perspiciatis aliquid dolor?</p>
-                    </div>
-                </article>
             </section>
         </div>    
     </main>
