--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>    
     <main class="site-main">
         <div class="container">
-                <h1 class="home-section__title home-presentation__title">Descripción y Contextualización de la Asignatura</h1>     
+                <h1 class="home-section__title home-presentation__title">Descripción y Contextualización</h1>     
             <section class="introduccion"> 
                     <p>"El curso trata el diseño de códigos de interfaz para distintos medios y soportes digitales, es decir, la capa Front-end dentro de un proyecto digital. Los alumnos aprenderán a desarrollar proyectos digitales enfocándose en cómo estos se componen y construyen a través de un código limpio, claro y ordenado, utilizando lenguajes tales como HTML, CSS, SASS, Javascript entre otros."</p>    
             </section>
