Arreglo de etiquetas

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
     </div>
     <footer class="site-footer">
-        <div class="container"
+        <div class="container">
         <p>Bitácora Diseño Desde el Código</p>
             <a class="text-dark" href="../bitacora-rosariovicenteg/index.html">Volver al inicio</a>
         </div> 
